--- a/app/globals.css
+++ b/app/globals.css
@@ -120,7 +120,8 @@
         @apply bg-background text-foreground;
     }
     button:not(:disabled),
-    [role="button"]:not(:disabled) {
+    [role="button"]:not(:disabled),
+    [role="menuitem"]:not(:disabled) {
         cursor: pointer;
     }
 }
